--- a/src/style/output.css
+++ b/src/style/output.css
@@ -947,6 +947,14 @@ video {
 }
 
 @media (min-width: 1024px) {
+  .lg\:mt-10 {
+    margin-top: 2.5rem;
+  }
+
+  .lg\:mt-8 {
+    margin-top: 2rem;
+  }
+
   .lg\:h-16 {
     height: 4rem;
   }
